src/test/ui/slice-to-vec-comparison.stderr
error[E0308]: mismatched types
  --> $DIR/slice-to-vec-comparison.rs:4:9
   |
LL |     a > b;
   |         ^ expected array of 0 elements, found struct `Vec`
   |
   = note: expected reference `&[_; 0]`
              found reference `&Vec<u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
